--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "proxy-server",
   "version": "1.0.0",
+  "type": "module", 
   "description": "",
-  "main": "index.js",
+  "main": "proxy-server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
-    "start": "node server.js"  
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node proxy-server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "emailjs": "^4.0.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2"
   }
 }
